# local-style-diffusion

./: .gitignore  PAPER_STRENGTHENING_GUIDE.md  README.md  local-style-diffusion.txt  test_fast_config.py  test_setup.py
configs/: experiment_config_debug.yaml  experiment_config_fast.yaml  experiment_config_paper.yaml
data/prompts/: test_prompts.json
experiments/ablation_injection_early_20250714_154040/: config.yaml  results.json
experiments/ablation_injection_early_20250714_171628/: results.json
experiments/ablation_studies/: ablation_report_ablation_1752448192.txt  (+4 more)
lp1/: requirements.txt
lp2/: LICENSE  Makefile  README.md  pyproject.toml
lp2/lpa2/: __init__.py
lp2/lpa2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lp2/lpa2/configs/: _tmp_run.yaml  ablation.yaml  default.yaml  models.yaml  schedules.yaml
lp2/lpa2/configs/prompts/: prompts_50.json  prompts_short.json  t2i_subset.json
lp2/lpa2/core/: __init__.py  hooks.py  models.py  parsing.py  profiling.py  routing.py  utils.py
lp2/lpa2/runners/: ablate.py  aggregate.py  architecture.py  bench.py  evaluate.py  generate.py  human_grids.py  plots.py  plots_ablation.py  prep_bench_prompts.py  select_examples.py  to_latex.py
lp2/scripts/: download_models.sh  setup_spacy.sh
lp2/tests/: test_hooks.py  test_parsing.py  test_smoke.py
scripts/: analyze_research_questions.py  compare_results.py  compare_with_sota.py  run_ablation_studies.py  run_complete_paper_analysis.py  setup_environment.sh  test_evaluation.py  user_study_generator.py  verify_paper_tracking.py
src/: __init__.py
(+299 files in other folders)
